salesforce/force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handbag</fullName>
            </value>
            <value>
                <fullName>Small Leather Goods</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Fragrance</fullName>
            </value>
            <value>
                <fullName>Champagne</fullName>
            </value>
            <value>
                <fullName>Cognac</fullName>
            </value>
            <value>
                <fullName>Whisky</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Gift Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>