salesforce/force-app/main/default/objects/Product2/fields/Maison__c.field-meta.xml
<CustomField>
    <fullName>Maison__c</fullName>
    <description>Which maison this product belongs to. Used by Apex to filter product recommendations per agent.</description>
    <label>Maison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Maison</fullName>
            </value>
            <value>
                <fullName>Maison des Esprits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>