salesforce/force-app/main/default/objects/Product2/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <description>Sub-brand or house within the maison</description>
    <label>Sub Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>